Listeners de RematadorController
Listeners de RematadorController para utilizar en swagger
