# SubastasWeb/routes/api.php
@@ -45,3 +45,7 @@ Route::apiResource('articulos', ArticuloController::class);
 Route::apiResource('lotes', LoteController::class);
 
 Route::apiResource('categorias', CategoriaController::class);
+
+Route::apiResource('clientes', ClienteController::class);
+
+Route::apiResource('proveedores', ProveedorController::class);
